--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!-- Write your HTML in this file -->
+<DOCTYPE html>
+    <html>
+        <!-- Write your HTML in this file -->
+        <a href="https://flatironschool.com">Flatiron School</a>
+    </html>
+
